Have proper update/create methods update swagger implement db GC (set to every 6 hours)
